fix: width search input, visibility menu-button

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,7 +1,7 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-    
+
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -19,7 +19,9 @@
       &__link
         font-size: 12px
         line-height: 15px
-
+  .search
+    &__input
+      width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
@@ -32,6 +34,7 @@
       display: flex
       width: 16px
       height: 11px
+      padding: 0
       align-items: center
       justify-content: space-between
       flex-direction: column
